--- a/CSS/box.html
+++ b/CSS/box.html
@@ -48,8 +48,8 @@
         .title p{
             padding: 10px;
             font-size: 15px;
-            color: purple ;
-            background-color: gray;
+            color: white ;
+            background-color: purple;
             border-radius: 50px;
         }
     </style>
