--- a/HomeWork3bySamnang/index.html
+++ b/HomeWork3bySamnang/index.html
@@ -37,11 +37,43 @@
       </b>
     </p>
     <div>
-      <img src="" alt="">
-      <img src="" alt="">
-      <img src="" alt="">
+      <div class="container">
+        <div class="item bg-img"></div>
+        <div class="item bg-img"></div>
+        <div class="item bg-img"></div>
+    </div>
     </div>
   </header>
+      <!-- section -->
+      <section class="section">
+        <div class="container">
+            <div class="item1">
+                <p>
+                    គ្រឿងម៉ាស៊ីនសំណង់
+                    <br>
+                    <br>
+                    យើងមានប្រពៃណីមោទនភាពនៃសេវាកម្មជា <br>
+                    អ្នកម៉ៅការទូទៅតាំងពីឆ្នាំ 1974
+                    <br>
+                    <br>
+                    យើងមានទីស្នាក់ការកណ្តាលនៅ San Diego <br>
+                    នាំមកនូវបទពីសោធន៍ជាង 42 ឆ្នាំនៃការសាងសង់ <br>
+                    ក្នុងស្រុក​​ នឹងថ្នាក់ជាតិ។ ជាមួយនឹងកេរ្តិ៍ឈ្មោះ <br>
+                    សម្រាប់ការផ្តល់ជូននូវគម្រោងសាងសង់-រចនាដ៏ធំ <br>
+                    នឹងប្លែកមុនកាលវិភាគ នឹង​ថវិកា។ ក្រុមហ៊ុនរបសស់ <br>
+                    យើងបានបម្រើអតិថិជន នឹងម្ចាស់អគារអស់់រយៈ <br>
+                    ពេលជាងបួនទសវត្សរ៍មកហើយ។
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                   
+                    អានបន្ថែម
+                </p>
+            </div>
+            <div class="item1 bg-img"></div>
+        </div>
+    </section>
 
   <main>
     <section class="section1">
@@ -66,7 +98,6 @@
           </P>
         </div>
 
-
         <div class="item3">
           <i class="fa-solid fa-building "></i>
           <P>
@@ -86,6 +117,11 @@
               នាំមកនូវបទពីសោធន៍ជាង 42</em>
           </P>
         </div>
+
+
+
+
+        
         <div class="item3">
           <h1><i class="fa-solid fa-user-graduate"></i></h1>
           <P>
